# projects

./: README.md
AAAA/: assets.cpp  bullet.cpp  enemies.cpp
AAAA/headers/: Enemies.h  bullet.h  cards.h  coin.h  functions.h  globals.h  logic.h  player.h
AAAA/images/: image.ase
MAIN PROJECT/: assets.cpp  build.sh  enemies.cpp  functions.cpp  game  globals.cpp  logic.cpp  main.cpp
MAIN PROJECT/headers/: assets.h  enums.h
MAIN PROJECT/images/: Sprite-0002.ase
Object Orianted Programing/: oop  oop.cpp  sorting  sorting.cpp
Rogue LIke/: main.cpp  thing
SNAKE(ill come back to it when i understand)/: main.cpp  snake
Systems/: game  shop.cpp
Typeshit/: main.js  tsconfig.json
Typeshit/src/: main.ts
basket/: basket  main.cpp
block breaker/: CMakeLists.txt  blockbreaker
block breaker/src/: main.cpp
clicker game/: CMakeLists.txt  cookie  main.cpp
fighting game/: fight  main.cpp
flappy bird/: main.cpp  thing
neobullet/: bullet  main.cpp
pong/: CMakeLists.txt  pong
pong/.cache/clangd/index/: main.cpp.0107E2913AC2AC65.idx
pong/src/: main.cpp  tempCodeRunnerFile.cpp
racing/: main  main.cpp
shitty bullet game made by ai/: bullet  main.cpp
shitty bullet game made without ai/: bullet  main.cpp
something/: game  main.cpp  rooms
