cmake_minimum_required(VERSION 3.10)
project(MyRaylibGame CXX)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(RAYLIB_INCLUDE_DIR "/usr/local/include")
set(RAYLIB_LIB_DIR "/usr/local/lib")
set(RAYLIB_LIBRARIES "raylib")
file(GLOB_RECURSE SOURCES "src/*.cpp")
add_executable(${PROJECT_NAME} ${SOURCES})
target_include_directories(${PROJECT_NAME} PRIVATE ${RAYLIB_INCLUDE_DIR})
target_link_directories(${PROJECT_NAME} PRIVATE ${RAYLIB_LIB_DIR})
target_link_libraries(${PROJECT_NAME} PRIVATE ${RAYLIB_LIBRARIES})
target_link_libraries(${PROJECT_NAME} PRIVATE GL rt m pthread dl)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_EXTENSIONS OFF)
target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -pedantic)
